--- a/final-project.qmd
+++ b/final-project.qmd
@@ -150,6 +150,37 @@ model_fit_table |>
   kable_styling(full_width = FALSE, bootstrap_options = c("striped", "hover"))
 ```
 
+## K-Fold Cross Validation
+```{r}
+# Define the R² function for one fold
+compute_r2 <- function(fold_num, data, folds) {
+  validation_idx <- which(folds == fold_num)
+  
+  train_data <- data[-validation_idx, ]
+  validation_data <- data[validation_idx, ]
+  
+  model <- lm(avg_co2 ~ avg_sdi, data = train_data)
+  predicted <- predict(model, newdata = validation_data)
+  actual <- validation_data$avg_co2
+  
+  r2 <- var(predicted) / var(actual)
+  return(r2)
+}
+
+# Set number of folds
+set.seed(42)
+k <- 10
+folds <- sample(rep(1:k, length.out = nrow(avg_data)))
+
+# Use map to apply function to each fold
+r2_values <- map_dbl(1:k, ~compute_r2(.x, avg_data, folds))
+
+# Output vector of R² values
+r2_values
+
+```
+
+
 The variance in the response variable (average CO₂ emissions per capita) was approximately **36.440**, while the variance in the fitted values from the regression model was **7.087**. This means that about **19.45%** of the variability in CO₂ emissions can be explained by a country's average SDI score from 1990–2019. The remaining **80.55%** is unexplained by this model and may be due to other factors such as industrialization, energy policies, or economic structure. While this suggests that SDI has a modest relationship with CO₂ emissions, it is not a very strong predictor on its own.
 
 ## Written Report
