--- a/final-project.qmd
+++ b/final-project.qmd
@@ -202,7 +202,7 @@ The histogram displays the distribution of R^2 values from 10-fold cross-validat
 
 ### Introduction
 
-For our project, we used Gapminder to find our two quantitative variables of our choosing. Those two variables were “CO2 emissions per Capita Consumption based” and the “Sustainable Development Index”. The 1st dataset contains information that tracks how much CO2 “consumption-based emissions generated in the production of goods and services according to where they were consumed, rather than where they were produced” (Our World in Data). The 2nd dataset contains information on the calculation of the development index, which is an efficiency metric made up of 2 other figures known as the “development index” and the “ecological impact index”. This index is to help measure different nations' efficiency in delivering human development. Meaning how well can a nation maintain its population's needs while allowing future generations to meet their needs as well. We hypothesize that there is a negative relationship between CO₂ emissions per capita (consumption-based) and the Sustainable Development Index (SDI). Specifically, as CO₂ emissions increase, we expect the SDI to decrease. The strength of this relationship is expected to be moderate to strong, depending on the country's economic and environmental policies. The rationale behind this hypothesis is that the Sustainable Development Index penalizes nations for exceeding planetary boundaries, particularly in terms of carbon emissions. Countries that consume more and thus emit more CO₂ per capita are likely to perform worse in sustainability metrics, even if their development index is high. An outside source that supports this hypothesis is the United Nations Development Programme's 2020 Human Development Report, titled "The Next Frontier: Human Development and the Anthropocene." This report highlights that human development must now be measured by social progress and the ecological constraints within which development occurs. It stresses that exceeding planetary boundaries—such as carbon budgets—undermines long-term sustainability, a core principle reflected in the SDI.
+For our project, we used Gapminder to find our two quantitative variables of our choosing. Those two variables were “CO2 emissions per Capita Consumption based” and the “Sustainable Development Index”. The 1st dataset contains information that tracks how much CO2 “consumption-based emissions generated in the production of goods and services according to where they were consumed, rather than where they were produced” (Our World in Data). The 2nd dataset contains information on the calculation of the development index, which is an efficiency metric made up of 2 other figures known as the “development index” and the “ecological impact index”. This index is to help measure different nations' efficiency in delivering human development. Meaning how well can a nation maintain its population's needs while allowing future generations to meet their needs as well. We hypothesize that there is a negative relationship between CO₂ emissions per capita (consumption-based) and the Sustainable Development Index (SDI). Specifically, as SDI score increases, we expect C02 emissions to decrease. The strength of this relationship is expected to be moderate to strong, depending on the country's economic and environmental policies. The rationale behind this hypothesis is that the Sustainable Development Index penalizes nations for exceeding planetary boundaries, particularly in terms of carbon emissions. Countries that consume more and thus emit more CO₂ per capita are likely to perform worse in sustainability metrics, even if their development index is high. An outside source that supports this hypothesis is the United Nations Development Programme's 2020 Human Development Report, titled "The Next Frontier: Human Development and the Anthropocene." This report highlights that human development must now be measured by social progress and the ecological constraints within which development occurs. It stresses that exceeding planetary boundaries—such as carbon budgets—undermines long-term sustainability, a core principle reflected in the SDI.
 
 ### Cleaning:
 
@@ -225,6 +225,10 @@ where:\
 The slope of the regression line indicates that for every one-point increase in SDI, a country’s average per capita CO₂ emissions are expected to decrease by approximately 0.18 metric tons, holding all else constant.
 
 To assess model fit, we calculated the variance in the response variable (CO₂), the variance in the model’s fitted values, and the variance in the residuals. These are summarized in the table below. The resulting ( R\^2 ) value was approximately **0.1945**, indicating that around **19.45%** of the variability in CO₂ emissions per capita can be explained by differences in SDI. While this suggests a real trend, it also implies that the majority of the variation is likely due to other factors not captured in this model.
+
+### Conclusion
+
+Put simply, our study suggests a modest, negative relationship between the average Sustainable Development Index score and average Carbon Dioxide emissions per capita across countries whose data come from the years 1990 to 2019. It should be noted that our data came from a total of 164 countries, and amongst those countries, not every year contained data. Thus, the negative association observed cannot be generalized to all countries as better-documented countries could have an underlying characteristic not present in poorly-documented countries that influences their relationship between their SDI and C02 levels. That said, our conclusion about the 164 countries included still holds substantial weight. Because we did not run an experiment, we cannot draw a cause-and-effect conclusion. However, since an experiment is next to impossible in this setting, correlational data may be the best foundation for action on this issue. For example, climate action organizations from certain countries, looking at our data analysis, could logically infer that higher CO2 emissions may be causing a lower SDI score and take action to repair the issue. Therefore, our analysis could be the visuospatial, communicative construction that uncovers an impactful truth with endless implications. 
 
 ### **References**
 
