--- a/final-project.qmd
+++ b/final-project.qmd
@@ -226,9 +226,13 @@ The slope of the regression line indicates that for every one-point increase in 
 
 To assess model fit, we calculated the variance in the response variable (CO₂), the variance in the model’s fitted values, and the variance in the residuals. These are summarized in the table below. The resulting ( R\^2 ) value was approximately **0.1945**, indicating that around **19.45%** of the variability in CO₂ emissions per capita can be explained by differences in SDI. While this suggests a real trend, it also implies that the majority of the variation is likely due to other factors not captured in this model.
 
+### Cross Validation
+
+To see how well our model fit the data, we did a 10-fold cross validation with ( R\^2 ) values as our metric. Our distribution of ( R\^2 ) values from our ten subsamples fell equally on each side of the ( R\^2 ) observed for our whole data, showing that we did not overfit our model. Underfitting is a possibility, but it is not obvious from our plot that anything more than a linear relationship exists. The large distribution of ( R\^2 ) values from our folds reflects the large variance along our model predicted regression line and also likely results from our number of folds being large, making each subsample small and hence prone to being non-reflective of our entire data. Overall, our linear regression model appears to be the best fit.  
+
 ### Conclusion
 
-Put simply, our study suggests a modest, negative relationship between the average Sustainable Development Index score and average Carbon Dioxide emissions per capita across countries whose data come from the years 1990 to 2019. It should be noted that our data came from a total of 164 countries, and amongst those countries, not every year contained data. Thus, the negative association observed cannot be generalized to all countries as better-documented countries could have an underlying characteristic not present in poorly-documented countries that influences their relationship between their SDI and C02 levels. That said, our conclusion about the 164 countries included still holds substantial weight. Because we did not run an experiment, we cannot draw a cause-and-effect conclusion. However, since an experiment is next to impossible in this setting, correlational data may be the best foundation for action on this issue. For example, climate action organizations from certain countries, looking at our data analysis, could logically infer that higher CO2 emissions may be causing a lower SDI score and take action to repair the issue. Therefore, our analysis could be the visuospatial, communicative construction that uncovers an impactful truth with endless implications. 
+Put simply, our analysis suggests a modest, negative relationship between the average Sustainable Development Index score and average Carbon Dioxide emissions per capita across countries whose data come from the years 1990 to 2019. It should be noted that our data came from a total of 164 countries, and amongst those countries, not every year contained data. Thus, the negative association observed cannot be generalized to all countries as better-documented countries could have an underlying characteristic not present in poorly-documented countries that influences their relationship between their SDI and C02 levels. That said, our conclusion about the 164 countries included still holds substantial weight and our model is solid according to our model validation test. Because we did not run an experiment, we cannot draw a cause-and-effect conclusion. However, since an experiment is next to impossible in this setting, correlational data may be the best foundation for action on this issue. For example, climate action organizations from certain countries, looking at our data analysis, could logically infer that higher CO2 emissions may be causing a lower SDI score and take action to repair the issue. Therefore, our analysis could be the visuospatial, communicative construction that uncovers an impactful truth with endless implications. 
 
 ### **References**
 
