Prep for final report

--- a/final-project.qmd
+++ b/final-project.qmd
@@ -196,7 +196,7 @@ ggplot(data.frame(R2 = r2_values), aes(x = R2)) +
   theme_minimal()
 ```
 
-The histogram displays the distribution of R^2 values from 10-fold cross-validation, with a mean of approximately 0.224 (red dashed line). This suggests the model explains about 22.4% of the variance in CO₂ emissions using SDI. The spread of values indicates moderate variability across folds, reflecting limited but consistent predictive power. These results suggest the model captures some underlying relationship but may omit other important predictors.
+The histogram displays the distribution of R\^2 values from 10-fold cross-validation, with a mean of approximately 0.224 (red dashed line). This suggests the model explains about 22.4% of the variance in CO₂ emissions using SDI. The spread of values indicates moderate variability across folds, reflecting limited but consistent predictive power. These results suggest the model captures some underlying relationship but may omit other important predictors.
 
 ## Written Report
 
@@ -228,11 +228,11 @@ To assess model fit, we calculated the variance in the response variable (CO₂)
 
 ### Cross Validation
 
-To see how well our model fit the data, we did a 10-fold cross validation with ( R\^2 ) values as our metric. Our distribution of ( R\^2 ) values from our ten subsamples fell equally on each side of the ( R\^2 ) observed for our whole data, showing that we did not overfit our model. Underfitting is a possibility, but it is not obvious from our plot that anything more than a linear relationship exists. The large distribution of ( R\^2 ) values from our folds reflects the large variance along our model predicted regression line and also likely results from our number of folds being large, making each subsample small and hence prone to being non-reflective of our entire data. Overall, our linear regression model appears to be the best fit.  
+To see how well our model fit the data, we did a 10-fold cross validation with ( R\^2 ) values as our metric. Our distribution of ( R\^2 ) values from our ten subsamples fell equally on each side of the ( R\^2 ) observed for our whole data, showing that we did not overfit our model. Underfitting is a possibility, but it is not obvious from our plot that anything more than a linear relationship exists. The large distribution of ( R\^2 ) values from our folds reflects the large variance along our model predicted regression line and also likely results from our number of folds being large, making each subsample small and hence prone to being non-reflective of our entire data. Overall, our linear regression model appears to be the best fit.
 
 ### Conclusion
 
-Put simply, our analysis suggests a modest, negative relationship between the average Sustainable Development Index score and average Carbon Dioxide emissions per capita across countries whose data come from the years 1990 to 2019. It should be noted that our data came from a total of 164 countries, and amongst those countries, not every year contained data. Thus, the negative association observed cannot be generalized to all countries as better-documented countries could have an underlying characteristic not present in poorly-documented countries that influences their relationship between their SDI and C02 levels. That said, our conclusion about the 164 countries included still holds substantial weight and our model is solid according to our model validation test. Because we did not run an experiment, we cannot draw a cause-and-effect conclusion. However, since an experiment is next to impossible in this setting, correlational data may be the best foundation for action on this issue. For example, climate action organizations from certain countries, looking at our data analysis, could logically infer that higher CO2 emissions may be causing a lower SDI score and take action to repair the issue. Therefore, our analysis could be the visuospatial, communicative construction that uncovers an impactful truth with endless implications. 
+Put simply, our analysis suggests a modest, negative relationship between the average Sustainable Development Index score and average Carbon Dioxide emissions per capita across countries whose data come from the years 1990 to 2019. It should be noted that our data came from a total of 164 countries, and amongst those countries, not every year contained data. Thus, the negative association observed cannot be generalized to all countries as better-documented countries could have an underlying characteristic not present in poorly-documented countries that influences their relationship between their SDI and C02 levels. That said, our conclusion about the 164 countries included still holds substantial weight and our model is solid according to our model validation test. Because we did not run an experiment, we cannot draw a cause-and-effect conclusion. However, since an experiment is next to impossible in this setting, correlational data may be the best foundation for action on this issue. For example, climate action organizations from certain countries, looking at our data analysis, could logically infer that higher CO2 emissions may be causing a lower SDI score and take action to repair the issue. Therefore, our analysis could be the visuospatial, communicative construction that uncovers an impactful truth with endless implications.
 
 ### **References**
 
