--- a/final-project.qmd
+++ b/final-project.qmd
@@ -228,7 +228,14 @@ To assess model fit, we calculated the variance in the response variable (CO₂)
 
 ### Cross Validation
 
-To see how well our model fit the data, we did a 10-fold cross validation with ( R\^2 ) values as our metric. Our distribution of ( R\^2 ) values from our ten subsamples fell equally on each side of the ( R\^2 ) observed for our whole data, showing that we did not overfit our model. Underfitting is a possibility, but it is not obvious from our plot that anything more than a linear relationship exists. The large distribution of ( R\^2 ) values from our folds reflects the large variance along our model predicted regression line and also likely results from our number of folds being large, making each subsample small and hence prone to being non-reflective of our entire data. Overall, our linear regression model appears to be the best fit.
+To assess the generalizability of our model beyond the data used to train it, we implemented 10-fold cross-validation. This method partitions the dataset into 10 roughly equal-sized subsets (or "folds"). For each fold, the model is trained on the remaining nine folds and evaluated on the left out fold. This process is repeated 10 times so that each subset serves as the validation set once. For each iteration, we calculated an R² value to measure how well the model predicted the validation data, using the ratio of the variance in the predicted values to the variance in the actual CO₂ emissions. The distribution of these ten R² values is displayed in the histogram. The mean R² across folds was approximately 0.224, slightly higher than the R² from the full model (0.1945), which suggests no evidence of substantial overfitting. Although performance varied across folds, the R² values remained consistently low to moderate, reinforcing the conclusion that the model captures some, but not all of the factors that explain CO₂ emissions per capita.
+These results highlight two key insights about our model:
+
+It generalizes reasonably well across different subsets of the data, lending credibility to the relationship between SDI and emissions.
+
+Its predictive power is limited, implying that SDI alone cannot account for the majority of variation in emissions. Future models could be improved by incorporating additional predictors, such as industrialization level, energy source mix, or trade dependence.
+
+Overall, cross-validation supports the initial model findings while providing a more robust estimate of its performance across new data.
 
 ### Conclusion
 
